# mog

./: Cargo.toml  README.md
examples/: tempfile-storage.sh
src/: cli.rs  env.rs  git.rs  lib.rs  main.rs  slack.rs  util.rs
src/cli/: get.rs  run.rs
