[package]
name = "mog"
version = "0.0.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "A command-line tool to log ML experiments"
homepage = "https://github.com/sile/mog"
repository = "https://github.com/sile/mog"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-std = { version = "1", features = ["attributes", "tokio02"] }
git2 = "0.13"
git-url-parse = "0.3"
hostname = "0.3"
mlmd = "0.1"
serde_json = "1"
slack-hook2 = "0.10"
structopt = "0.3"
tempfile = "3"
url = "2"

# See: https://github.com/launchbadge/sqlx/issues/1048
funty = "=1.1.0"