[package]
name = "mog"
version = "0.0.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "A command-line tool to log ML experiments"
homepage = "https://github.com/sile/mog"
repository = "https://github.com/sile/mog"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
git2 = { version = "0.19", default-features = false }
git-url-parse = "0.4"
hostname = "0.4"
mlmd = "0.3"
serde_json = "1"
structopt = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["macros"] }
url = "2"
funty = "2"
